# freetype-sys

./: .gitmodules  Cargo.toml  README.md  appveyor.yml  build.rs
.github/workflows/: ci.yml
freetype2/include/freetype/config/: ftoption.h
src/: lib.rs  tt_tables.rs
